# ChangeLog for x11-apps/xhost
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xhost/ChangeLog,v 1.43 2007/10/09 09:03:56 dberkholz Exp $

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xhost-1.0.1.ebuild:
  Drop old ebuilds.

  29 Sep 2007; Raúl Porcel <armin76@gentoo.org> xhost-1.0.2.ebuild:
  sparc stable wrt #191615

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> xhost-1.0.2.ebuild:
  Stable on mips, per #191615.

  10 Sep 2007; Jeroen Roovers <jer@gentoo.org> xhost-1.0.2.ebuild:
  Stable for HPPA (bug #191615).

  09 Sep 2007; Raúl Porcel <armin76@gentoo.org> xhost-1.0.2.ebuild:
  alpha/ia64 stable wrt #191615

  08 Sep 2007; Joseph Jezak <josejx@gentoo.org> xhost-1.0.2.ebuild:
  Marked ppc/ppc64 stable for bug #191615.

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> xhost-1.0.2.ebuild:
  Reverting.

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> xhost-1.0.2.ebuild:
  Stable for HPPA (bug #191615).

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> xhost-1.0.2.ebuild:
  Stable on amd64 wrt bug #191615.

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> xhost-1.0.2.ebuild:
  Stable on x86 wrt bug #191615.

*xhost-1.0.2 (01 Aug 2007)

  01 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; +xhost-1.0.2.ebuild:
  Bump. Only manpage updates.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> xhost-1.0.1.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  17 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org> xhost-1.0.1.ebuild:
  Fix up DESCRIPTION.  (Petteri Räty, bug #158331)

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xhost-1.0.1.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xhost-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> xhost-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; xhost-1.0.1.ebuild: