@@ -1,5 +1,5 @@
 AUX xhost-1.0.2-winnt.patch 1527 RMD160 c161c1fbe002b8394beabe840413e0b72e14739d SHA1 bc64b4039f3ed9587af85bfa6c18f9b9fff9b51c SHA256 ca3bae8b56709a70a240af4f02ffe4a73de0b9814c921c3c5cf1056c3e539285
 DIST xhost-1.0.2.tar.bz2 98006 RMD160 08863349dc0b359e023fa69944ad54f42c880a99 SHA1 307dbce5491c7c22f438d8856cd983004b78b86c SHA256 edab2cc49d230f58e54c0f7b83fd726fec5fc31356668a11589649f19ba90db6
-EBUILD xhost-1.0.2.ebuild 703 RMD160 b4b9ac7492c0614e80c2cc71466896e616e57a0f SHA1 6feebf56f50e1876476533d429dea2f428a61e62 SHA256 a925d418e8e3122ed26a40d3064fcd3db32395ded05b3f0a98fe50fe39cf30f8
-MISC ChangeLog 4941 RMD160 31b5b3bc1132ad46f000673e2eba3d84f5ebce62 SHA1 d0a608eb98b7fe08fdf8edb477076338ec2cb840 SHA256 f70fab3fdb379726d6634d0a7ff3fcd78eebea7b6861b74bd1e28fa5d0140636
+EBUILD xhost-1.0.2.ebuild 722 RMD160 5a2fd844106b0d06fd8a03583d3cf68f1b8156a8 SHA1 6e4c0d566bdbe38aa17d6498fded64b062a8fe71 SHA256 b8aa8c402ff0b0d38454c73ceb87332d1953d4646c2ba275cfcc7da4f4932b0c
+MISC ChangeLog 5059 RMD160 4ae9c945bad129c1d941f123c2e0285637151b8b SHA1 898ceb8e4fec928aefe9be9b3679b08ff8ea4d25 SHA256 a22cdc6f5c53c1f07b88dca0fb0e510b5854b7f99fddab40e4a4c49dae2f2d80
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
