@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xhost/xhost-1.0.2.ebuild,v 1.11 2007/09/29 10:12:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xhost/xhost-1.0.2.ebuild,v 1.12 2009/05/04 15:04:28 ssuominen Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -16,7 +16,9 @@ RDEPEND="x11-libs/libX11
 	x11-libs/libXmu"
 DEPEND="${RDEPEND}"
 
-CONFIGURE_OPTIONS="$(use_enable ipv6)"
+pkg_setup() {
+	CONFIGURE_OPTIONS="$(use_enable ipv6)"
+}
 
 src_unpack() {
 	PATCHES="${FILESDIR}"/${P}-winnt.patch
