@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xhost
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xhost/ChangeLog,v 1.43 2007/10/09 09:03:56 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xhost/ChangeLog,v 1.44 2009/05/04 15:04:28 ssuominen Exp $
+
+  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> xhost-1.0.2.ebuild:
+  Move use_ functions out of global scope.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xhost-1.0.1.ebuild:
   Drop old ebuilds.
